# Yandex_praktikum_cpp

./: CMakeLists.txt  array_ptr.h  canvas.h  common.h  comy_main.cpp  concurrent_map.h  document.cpp  document.h  geo.cpp  geo.h  ini.cpp  ini.h  input_reader.cpp  input_reader.h  json.cpp  json.h  json_reader.cpp  json_reader.h  log_duration.cpp  log_duration.h  main.cpp  my_assert.h  octopus.h  paginator.h  process_queries.cpp  process_queries.h  ptrvector.h  read_input_functions.cpp  read_input_functions.h  remove_duplicates.cpp  request_handler.cpp  request_handler.h  request_queue.cpp  request_queue.h  runner_test.h  scopedptr.h  search_server.cpp  search_server.h  shapes.h  simple_vector.h  (+12 more)
